--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>fish.focus.uvms.maven</groupId>
 		<artifactId>uvms-pom</artifactId>
-		<version>2.2</version>
+		<version>2.4</version>
 	</parent>
 
     <groupId>eu.europa.ec.fisheries.uvms.spatialSwe</groupId>
@@ -33,6 +33,7 @@
         <geotools.version>22.0</geotools.version>
         <uvms.commons.version>4.0.4</uvms.commons.version>
         <usm4uvms.version>4.0.23</usm4uvms.version>
+        <fish.focus.parent.version>2.4</fish.focus.parent.version>
         <usm_deployment_descriptor_force_update>false</usm_deployment_descriptor_force_update>
         <release.branch.name>uvms-1.0.0</release.branch.name>
         <maven.scm.provider.version>2.1.1</maven.scm.provider.version>
@@ -59,31 +60,37 @@
 			<dependency>
 				<groupId>fish.focus.uvms.maven</groupId>
 				<artifactId>uvms-pom-monitoring-deps</artifactId>
-				<version>2.2</version>
+				<version>${fish.focus.parent.version}</version>
 				<type>pom</type>
 			</dependency>
 			<dependency>
 				<groupId>fish.focus.uvms.maven</groupId>
 				<artifactId>uvms-pom-gis-deps</artifactId>
-                <version>2.2</version>
+                <version>${fish.focus.parent.version}</version>
 				<type>pom</type>
 			</dependency>
 			<dependency>
 				<groupId>fish.focus.uvms.maven</groupId>
 				<artifactId>uvms-pom-test-deps</artifactId>
-                <version>2.2</version>
+                <version>${fish.focus.parent.version}</version>
 				<type>pom</type>
 			</dependency>
 			<dependency>
 				<groupId>fish.focus.uvms.maven</groupId>
 				<artifactId>uvms-pom-arquillian-deps</artifactId>
-                <version>2.2</version>
+                <version>${fish.focus.parent.version}</version>
 				<type>pom</type>
 			</dependency>
             <dependency>
                 <groupId>fish.focus.uvms.maven</groupId>
                 <artifactId>uvms-pom-logging-deps</artifactId>
-                <version>2.2</version>
+                <version>${fish.focus.parent.version}</version>
+                <type>pom</type>
+            </dependency>
+            <dependency>
+                <groupId>fish.focus.uvms.maven</groupId>
+                <artifactId>uvms-pom-java11-deps</artifactId>
+                <version>${fish.focus.parent.version}</version>
                 <type>pom</type>
             </dependency>
 
@@ -246,10 +253,10 @@
                         <ejbVersion>3.1</ejbVersion>
                     </configuration>
                 </plugin>
-                <plugin>
+                <!--plugin>     This has been disabled due to a compatibility issues between various versions of open jdk and the javadoc plugin. For more info, see: https://issues.apache.org/jira/browse/MJAVADOC-615
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-javadoc-plugin</artifactId>
-                    <version>2.10.4</version>
+                    <version>3.1.0</version>
                     <executions>
                         <execution>
                             <id>attach-javadocs</id>
@@ -257,11 +264,12 @@
                                 <goal>jar</goal>
                             </goals>
                             <configuration>
-                                <additionalparam>${javadoc.opts}</additionalparam>
+                                <source>8</source>
+                                <additionalOptions>${javadoc.opts}</additionalOptions>
                             </configuration>
                         </execution>
                     </executions>
-                </plugin>
+                </plugin-->
             </plugins>
         </pluginManagement>
 
