--- a/rest/pom.xml
+++ b/rest/pom.xml
@@ -9,7 +9,7 @@
     <parent>
         <groupId>eu.europa.ec.fisheries.uvms.spatialSwe</groupId>
         <artifactId>spatialSwe</artifactId>
-        <version>2.0.19-UVMS</version>
+        <version>2.0.20-UVMS-SNAPSHOT</version>
     </parent>
     
 	<properties>
