--- a/module/pom.xml
+++ b/module/pom.xml
@@ -9,7 +9,7 @@
     <parent>
         <groupId>eu.europa.ec.fisheries.uvms.spatialSwe</groupId>
         <artifactId>spatialSwe</artifactId>
-        <version>2.0.20-UVMS-SNAPSHOT</version>
+        <version>2.1.0-UVMS</version>
     </parent>
 
     <build>
