[UNIONVMS-4431] Fixed Arquillian configuration/retrieve the application URL using test.properties
Also some clean-up, e.g. the useless "logfile_IS_UNDEFINED" files.

--- a/rest/pom.xml
+++ b/rest/pom.xml
@@ -96,6 +96,12 @@
 
     <build>
         <finalName>${project.name}-${project.version}</finalName>
+		<testResources>
+			<testResource>
+				<directory>src/test/resources</directory>
+				<filtering>true</filtering>
+			</testResource>
+		</testResources>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
