--- a/module/pom.xml
+++ b/module/pom.xml
@@ -39,6 +39,7 @@
                             <artifactId>rest</artifactId>
                         </webModule>
                     </modules>
+                    <filtering>true</filtering>
                     <skinnyWars>true</skinnyWars>
                 </configuration>
             </plugin>
