--- a/LIQUIBASE/pom.xml
+++ b/LIQUIBASE/pom.xml
@@ -167,7 +167,9 @@
                     <artifactId>maven-assembly-plugin</artifactId>
                     <version>3.2.0</version>
                     <configuration>
-                        <descriptor>assembly.xml</descriptor>
+                        <descriptors>
+                            <descriptor>assembly.xml</descriptor>
+                        </descriptors>
                         <finalName>${project.artifactId}</finalName>
                         <appendAssemblyId>false</appendAssemblyId>
                     </configuration>
