--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>fish.focus.uvms.maven</groupId>
 		<artifactId>uvms-pom</artifactId>
-		<version>3.0</version>
+		<version>3.1</version>
 	</parent>
 
     <groupId>eu.europa.ec.fisheries.uvms.spatialSwe</groupId>
@@ -17,7 +17,7 @@
   <properties>
         <!-- The spatial name is used as a common point to rename the application alias visible in USM-->
         <spatial.name>Spatial</spatial.name>
-        <docker.dev.version>3.40.19.w18-JsonBOverJackson</docker.dev.version>
+        <docker.dev.version>3.43.0</docker.dev.version>
         <docker.liquibase.changeLogFile>LIQUIBASE/changelog/db-changelog-master.xml</docker.liquibase.changeLogFile>
         <docker.liquibase.db.user>spatial</docker.liquibase.db.user>
         <docker.liquibase.db.passwd>spatial</docker.liquibase.db.passwd>
@@ -33,7 +33,7 @@
         <geotools.version>22.2</geotools.version>
         <uvms.commons.version>4.1.6</uvms.commons.version>
         <usm4uvms.version>4.1.0</usm4uvms.version>
-        <fish.focus.parent.version>3.0</fish.focus.parent.version>
+        <fish.focus.parent.version>3.1</fish.focus.parent.version>
         <usm_deployment_descriptor_force_update>false</usm_deployment_descriptor_force_update>
         <release.branch.name>uvms-1.0.0</release.branch.name>
         <maven.scm.provider.version>2.1.1</maven.scm.provider.version>
@@ -171,7 +171,7 @@
             <dependency>
                 <groupId>com.sun.xml.bind</groupId>
                 <artifactId>jaxb-core</artifactId>
-                <version>2.3.0.1</version>
+                <version>2.3.1.1</version>
             </dependency>
 
             <dependency>
@@ -216,7 +216,7 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-project-info-reports-plugin</artifactId>
-                    <version>3.0.0</version>
+                    <version>3.1.0</version>
                 </plugin>
                 <!--plugin>
                     <groupId>org.apache.maven.plugins</groupId>
