--- a/pom.xml
+++ b/pom.xml
@@ -281,6 +281,11 @@
                     </includes>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.liquibase</groupId>
+                <artifactId>liquibase-maven-plugin</artifactId>
+                <version>3.5.3</version>
+            </plugin>
         </plugins>
     </build>
     <!-- add repositories for JTS and Hibernate Spatial and Hibernate (JBoss) -->
