--- a/LIQUIBASE/pom.xml
+++ b/LIQUIBASE/pom.xml
@@ -8,7 +8,7 @@
     <parent>
         <groupId>eu.europa.ec.fisheries.uvms.spatialSwe</groupId>
         <artifactId>spatialSwe</artifactId>
-        <version>2.2.4-UVMS-SNAPSHOT</version>
+        <version>2.2.4-UVMS</version>
     </parent>
 
     <profiles>
