--- a/client/pom.xml
+++ b/client/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>eu.europa.ec.fisheries.uvms.spatialSwe</groupId>
         <artifactId>spatialSwe</artifactId>
-        <version>2.2.4-UVMS-SNAPSHOT</version>
+        <version>2.2.4-UVMS</version>
     </parent>
 
     <artifactId>spatial-client</artifactId>
