--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 
     <groupId>eu.europa.ec.fisheries.uvms.spatialSwe</groupId>
     <artifactId>spatialSwe</artifactId>
-    <version>2.2.6-UVMS</version>
+    <version>2.2.7-UVMS-SNAPSHOT</version>
     <packaging>pom</packaging>
     <description>Maven project-archetype for UnionVms modules</description>
 
@@ -174,7 +174,7 @@
 
     <scm>
         <connection>${scm.connection}</connection>
-        <tag>spatialSwe-2.2.6-UVMS</tag>
+        <tag>HEAD</tag>
     </scm>
 
     <modules>
