[UNIONVMS-4981] Logging dependencies and logback.xml changes~

--- a/pom.xml
+++ b/pom.xml
@@ -94,9 +94,10 @@
             </dependency>
 
             <dependency>
-                <groupId>org.slf4j</groupId>
-                <artifactId>slf4j-api</artifactId>
-                <version>1.7.25</version>
+                <groupId>fish.focus.uvms.maven</groupId>
+                <artifactId>uvms-pom-logging-deps</artifactId>
+                <version>1.21</version>
+                <type>pom</type>
             </dependency>
 
             <dependency>
