--- a/pom.xml
+++ b/pom.xml
@@ -39,7 +39,7 @@
 
         <application.name>${project.parent.artifactId}</application.name>
         <application.version>${project.parent.version}</application.version>
-        <application.logfile>${project.parent.artifactId}/${project.parent.artifactId}.log</application.logfile>
+        <application.logfile>${project.parent.artifactId}.log</application.logfile>
         <application.logfile.boot>/app/logs/${project.parent.artifactId}/${project.parent.artifactId}-boot.log</application.logfile.boot>
         <hibernate.version>5.3.17.Final</hibernate.version>
         <hibernate-spatial.version>4.3</hibernate-spatial.version>
