--- a/service/pom.xml
+++ b/service/pom.xml
@@ -62,7 +62,7 @@
             <exclusions>
                 <exclusion>
                     <groupId>com.vividsolutions</groupId>
-                    <artifactId>jts</artifactId>
+                    <artifactId>jts-core</artifactId>
                 </exclusion>
             </exclusions>
         </dependency>
