--- a/rest/pom.xml
+++ b/rest/pom.xml
@@ -19,47 +19,41 @@
 	</properties>
 
     <dependencies>
-
-
-
+        <dependency>
+            <groupId>com.vividsolutions</groupId>
+            <artifactId>jts-core</artifactId>
+            <version>${jts.version}</version>
+            <scope>provided</scope>
+        </dependency>
 		<dependency>
 		    <groupId>com.fasterxml.jackson.core</groupId>
 		    <artifactId>jackson-annotations</artifactId>
 		    <version>2.6.0</version>
 		    <scope>provided</scope>
 		</dependency>
-        
-
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>spatial-model</artifactId>
             <scope>provided</scope>
         </dependency>
-
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>service</artifactId>
             <scope>provided</scope>
         </dependency>
-
         <dependency>
             <groupId>eu.europa.ec.fisheries.uvms</groupId>    <!-- this imports vividsolutions, for some reason.....-->
             <artifactId>uvms-test</artifactId>
         </dependency>
-
-
         <dependency>
             <groupId>eu.europa.ec.fisheries.uvms.movement</groupId>
             <artifactId>movement-model</artifactId>
         </dependency>
-
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-validator</artifactId>
 			<scope>provided</scope>
 		</dependency>
-
-
         <dependency>
             <groupId>org.jboss.resteasy</groupId>
             <artifactId>jaxrs-api</artifactId>
@@ -82,7 +76,6 @@
             <artifactId>message</artifactId>
             <scope>test</scope>
         </dependency>
-
     </dependencies>
 
     <build>
