--- a/model/pom.xml
+++ b/model/pom.xml
@@ -25,12 +25,6 @@
     <dependencies>
 
         <dependency>
-            <groupId>fish.focus.uvms.maven</groupId>
-            <artifactId>uvms-pom-test-deps</artifactId>
-            <type>pom</type>
-        </dependency>
-
-        <dependency>
             <groupId>org.jvnet.jaxb2_commons</groupId>
             <artifactId>jaxb2-basics-runtime</artifactId>
             <version>${jaxb2.version}</version>
@@ -46,12 +40,9 @@
             <groupId>fish.focus.uvms.maven</groupId>
             <artifactId>uvms-pom-java11-deps</artifactId>
             <type>pom</type>
+            <scope>provided</scope>
         </dependency>
 
-        <dependency>
-            <groupId>eu.europa.ec.fisheries.uvms.commons</groupId>
-            <artifactId>uvms-commons-date</artifactId>
-        </dependency>
     </dependencies>
 
 
