missing commons-date

--- a/module/pom.xml
+++ b/module/pom.xml
@@ -49,7 +49,10 @@
         <dependency>
             <groupId>eu.europa.ec.fisheries.uvms.commons</groupId>
             <artifactId>uvms-commons-rest</artifactId>
-            <version>${uvms.commons.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>eu.europa.ec.fisheries.uvms.commons</groupId>
+            <artifactId>uvms-commons-date</artifactId>
         </dependency>
         <dependency>
             <groupId>org.geotools</groupId>
