--- a/client/pom.xml
+++ b/client/pom.xml
@@ -28,6 +28,10 @@
             <groupId>eu.europa.ec.fisheries.uvms.spatialSwe</groupId>
             <artifactId>spatial-model</artifactId>
         </dependency>
+        <dependency>
+            <groupId>eu.europa.ec.fisheries.uvms.commons</groupId>
+            <artifactId>uvms-commons-date</artifactId>
+        </dependency>
 
         <!-- Test dependencies -->
         <dependency>
